# zig-rp2040-lab

./: .gitignore  LICENSE  README.md  build.zig
docs/: 01-boot.md
docs/01-boot/: README.md
docs/01-boot/exercise-1/blinky/: CMakeLists.txt  blinky.c
docs/01-boot/exercise-3/: blinky.zig  boot2.s  build.zig  memmap.ld
docs/02-sdk-interop/: README.md
docs/02-sdk-interop/exercise-4/: CMakeLists.txt  blinky.zig  build.zig
docs/02-sdk-interop/exercise-5/: CMakeLists.txt  main.zig
docs/03-picotool/: README.md
docs/04-timer-interrupts/: README.md
docs/04-timer-interrupts/exercise-7/: CMakeLists.txt  build.zig  main.zig  pico.zig
docs/05-exception-entry-and-register-stacking/: README.md
docs/05-exception-entry-and-register-stacking/exercise-8/: CMakeLists.txt  main.zig  pico.zig
docs/06-pendsv-interrupt/: README.md
docs/06-pendsv-interrupt/exercise-9/: CMakeLists.txt  main.zig  pico.zig
docs/07-multi-core/: README.md
docs/07-multi-core/exercise-10/: CMakeLists.txt  main.zig  pico.zig
docs/08-spinlocks/: README.md
docs/08-spinlocks/exercise-11/: CMakeLists.txt  build.zig  main.zig  pico.zig
docs/08-spinlocks/exercise-12/: CMakeLists.txt  main.zig  pico.zig
docs/09-linker-scripts/: README.md
docs/10-crt0/: README.md
docs/11-zrt0/: README.md
docs/12-clocks/: README.md
docs/13-serial-communication/: README.md
docs/14-task-registration/: README.md
docs/15-context-switching/: README.md
docs/16-timer-peripheral/: README.md
docs/17-heap-allocator/: README.md
docs/18-task-blocking/: README.md
src/: main.zig
src/boot/stage2/: rp2040_bootrom.zig
src/boot/stage2/shared/: regs.h  stage2.ld
src/boot/zrt0/: rp2040.ld  zrt0.zig
src/core/: clocks.zig  gpio.zig  memory.zig  mmio.zig  mod.zig  pendsv.zig  systick.zig  timer.zig  uart.zig  watchdog.zig
src/kernal/: heap.zig  mod.zig  scheduler.zig  task.zig
src/kernal/arch/armv6m/: mod.zig  pendsv.zig  systick.zig
src/kernal/isr/: hard_fault.zig  mod.zig  pendsv.zig  systick.zig
src/kernal/scheduler/: mod.zig  policy.zig  round_robin.zig
src/kernal/scheduler/algorithms/: mod.zig  round_robin.zig  super_loop.zig
src/kernal/util/: mod.zig  stack_frame.zig
